2002-10-29  Reinhard Max  <max@suse.de>

	* tkchat.tcl (addMessage): Recognize "tick" as a clock bot name.

2002-09-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl: Added entry widget "history" (up/down arrows,
	transient to current chat session).
	Added the ability to hide the online users list.

2002-09-26  D. Richard Hipp  <drh@hwaci.com>

	* tkchat.tcl: Added the "Alerts" menu and its associated functionality.

2002-08-13  Reinhard Max  <max@suse.de>

	* tkchat.tcl: Added support for starkits (stevel).

2002-08-08  Reinhard Max  <max@suse.de>

	* tkchat.tcl (msgSend): Typo fix.

2002-07-31  Reinhard Max  <max@suse.de>

	* tkchat.tcl: Prevent LEO window from being destroyed when being
	closed by the window manager.

2002-07-26  Reinhard Max  <max@suse.de>

	* tkchat.tcl (::tkchat::Init): Fixed handling of http_proxy
	environment variable.

2002-07-25  Reinhard Max  <max@suse.de>

	* tkchat.tcl (::tkchat::Smile): Added icons for coffee (LP), food
	(|O|), znooze (zzz), and beer (|_P)..

2002-07-19  Reinhard Max  <max@suse.de>

	* tkchat.tcl: Added bindings to the text window for scrolling with
	cursor up/dowm keys, and mouse wheel (maybe Unix only). Also added
	askLEO, a web scraper for English <=> German translation via
	http://dict.leo.org.

2002-05-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl: don't add the festival hook by default - it can
	lead to very surprising startup for those with festival installed
	but who didn't request text-to-speech conversion.

2002-04-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: added language translation to the help menu via
	the babelfish website. The selection is translated and the result
	printed as a system message in the chat window.

2002-03-21  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (Debug): New debug menu item to load support for
	remote inspection using dde or comm for use with tkinspect.	
	* tkchat.tcl (addNewLines): Re-added the history size restriction.
